# BSc-project-18-19

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  ConsoleApplication1.cpp  Makefile  OrangeConfig.h  README.md  blue_mapper.cpp  brown_mapper.cc  cmake_install.cmake  main.cpp  pink_mapper  ref2.fasta  single_read.fasta  test.fasta  test2.fasta  white_mapper  white_mapper.cxx  white_mapper.h
lbcb-mapper/: CMakeLists.txt  lbcb-mapper.workspace
lbcb-mapper/.codelite/: lbcb-mapper.session  lbcb-mapper.tags
lbcb-mapper/src/: pink_mapper.cpp
src/: CMakeLists.txt  OrangeConfig.h.in  blue_alignment.cpp  blue_alignment.hpp  blue_mapper.cpp  blue_minimizers.cpp  blue_minimizers.hpp  brown_alignment.cc  brown_alignment.hpp  brown_mapper.cc  brown_mapper.hpp.in  brown_minimizers.cc  brown_minimizers.hpp  global_alignment.cpp  local_alignment.cpp  orange_alignment.cpp  orange_alignment.h  orange_mapper.cpp  orange_minimizers.cpp  orange_minimizers.h  pink_alignment.cpp  pink_alignment.hpp  pink_mapper.cpp  pink_minimizers.cpp  pink_minimizers.hpp  semi_global_alignment.cpp  white_alignment.cxx  white_alignment.h  white_mapper.cxx  white_mapper.h.in  white_minimizers - Copy.cxx  white_minimizers.cxx  white_minimizers.h
test/: blue_mapper_tests.cpp  brown_mapper_unittest.cc  orange_mapper_tests.cpp  pink_mapper_test.cpp  test1.cpp  white_mapper_test.cxx
